Updated api and added filtering by expiration days
